--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,5 +19,9 @@
   ],
   "browser_action": {
       "default_popup": "popup.html"
+  },
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
   }
 }
