--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Daily Mail Sidebar Blocker",
   "version": "1.1",
-  "description": "Hide the Sidebar on the Daily Mail!",
+  "description": "Hide the Sidebar with suggested articles on the Daily Mail website!",
   "manifest_version": 2,
   "permissions": [
       "storage",
